@@ -142,6 +142,6 @@ DIST netbeans-xtest-6.0-m10_pre20070611093109.tar.bz2 4709753 RMD160 238bdd597f0
 DIST netbeans_mobility-5_5_1-linux.bin 52745216 RMD160 2058ac6701b47f378ead48851329420360169980 SHA1 844fc236667b5a3df57c6c1b195d246a900a6029 SHA256 a47e9ef5f2fdce60d2c6b65ad1e76be8b70257b89ae60dae1bdc33965e814f27
 EBUILD netbeans-5.5.1.ebuild 15257 RMD160 a6690d8fc51713e540d264b3c7de7dc6c1b8fa26 SHA1 ac9ceb18f01639ccf02e2a71d32f1749723ee54a SHA256 7ae84f3ad1d82ebd5d351cd806bb3c4abb8f185e9c21bf6618783ee0efad5158
 EBUILD netbeans-6.0_alpha10_pre20070608171640.ebuild 31429 RMD160 102b6e22ca624b043f3a8c6fd178a08ca5b56dd3 SHA1 427f59ff25ddc952389d33812ff7c98880d75345 SHA256 db7c070688d8da15b87fb1a66136ceb5c626336a85090c289f71c36301186f88
-EBUILD netbeans-6.0_alpha10_pre20070611093109.ebuild 31429 RMD160 102b6e22ca624b043f3a8c6fd178a08ca5b56dd3 SHA1 427f59ff25ddc952389d33812ff7c98880d75345 SHA256 db7c070688d8da15b87fb1a66136ceb5c626336a85090c289f71c36301186f88
-MISC ChangeLog 15770 RMD160 4569dc6d447b8f6a2ce0e81e1914c1dd3b1fee3d SHA1 c9f8d28e6b6cf359d820e79b7ed6ffb46b68989f SHA256 bf6e274a93bde6fa789b9cdd215567080d23f0be4bf9fabff2403390d6d2fbeb
+EBUILD netbeans-6.0_alpha10_pre20070611093109.ebuild 31646 RMD160 c34c8ac5f04084fd3db08b20100a1eb18c0b2de4 SHA1 77041234b6eae7f27881c79755236aac73c4f71f SHA256 b83f7741110a3e895552abbab51f0b3cbbf645486f48cd1e161a549cae690925
+MISC ChangeLog 15912 RMD160 59d63d747e57726365f3c91afdae954c1d031b36 SHA1 285ce1fc947f46c72daaddaa47c91c1b2ac2420e SHA256 13ddd5e95b2869c540a5bf8c33ad39245c8225e50cc3c71b73165c9aaf86442b
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
